--- a/site.yml
+++ b/site.yml
@@ -1,11 +1,15 @@
 site:
-  title: Continous Integration Continous Deployment
+  title: PierreR (pi3r)
+  url: https://pi3r.be
+  start_page: notebook::nix/index.adoc
 content:
   sources:
   - url: https://github.com/pierrer/notebook.git
     branches: master
+  - url: https://github.com/CIRB/devbox.git
+    start_path: docs
+    branches: master
 ui:
   bundle:
-    url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
-    snapshot: true
+    url: https://github.com/PierreR/antora-ui/releases/download/v0.5/ui-bundle.zip
   supplemental_files: ./supplemental-ui
