--- a/.envrc
+++ b/.envrc
@@ -1,8 +1,1 @@
-if ! systemctl --user is-active --quiet lorri.socket;
-then
-  echo "Using nix-shell without lorri"
-  use_nix shell.nix
-else
-  echo "Using nix-shell with lorri"
-  eval "$(lorri direnv)"
-fi
+use_nix
