--- a/site.yml
+++ b/site.yml
@@ -6,13 +6,11 @@ content:
   sources:
   - url: https://github.com/pierrer/notebook.git
     branches: master
-  - url: https://github.com/pierrer/devbox.git
-    start_path: docs
-    branches: master
 asciidoc:
   attributes:
     example-caption: ~
 ui:
   bundle:
-    url: https://github.com/PierreR/antora-ui/releases/download/v0.8/ui-bundle.zip
+    url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
+    snapshot: true
   supplemental_files: ./supplemental-ui
