--- a/site_local.yml
+++ b/site_local.yml
@@ -8,7 +8,10 @@ content:
     branches: HEAD
 asciidoc:
   attributes:
+    experimental: ''
     example-caption: ~
+    table-caption: ~
+    page-pagination: ''
 ui:
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
