--- a/config.json
+++ b/config.json
@@ -6,10 +6,9 @@
   "stop_urls": [],
   "selectors": {
     "lvl0": {
-      "selector": "//nav[@class='crumbs']//li[@class='crumb'][last()-1]",
+      "selector": "//nav[@class='breadcrumbs']//li[last()-1]//a",
       "type": "xpath",
-      "global": true,
-      "default_value": "Home"
+      "global": true
     },
     "lvl1": ".doc h1",
     "lvl2": ".doc h2",
